Closed Bug 49487 Opened 25 years ago Closed 21 years ago

If Linux inst msg "dir doesn't exist" is closed by checkbox, install wizard won't advance past "Next"

Categories

(SeaMonkey :: Installer, defect, P5)

x86
Linux
defect

Tracking

(Not tracked)

RESOLVED FIXED
Future

People

(Reporter: depman1, Assigned: ajschult784)

Details

Attachments

(1 file, 1 obsolete file)

Linux only. Mozilla build 2000-08-18-08-M18. 1. Download Linux installer stub and run the installer. 2. Click OK and Accept. 3. Click Next. (the default Directory location is unchanged. It's still /usr/local/Mozilla). 4. We get Mozilla msg "Directory /usr/local/Mozilla doesn't exist. Create it?" 5. Click the close checkbox. 6. From the install window, click Next. Result: Nothing happens. Even if we change the directory location, it's hosed. Workaround is to press Cancel. Expected: Same as if we pressed "No" (don't create it). the "dir doesn't exist" msg should reappear.
QA Contact: gemal → gbush
Summary: If Linux inst msg "dir doesn't exist" is closed by checkbox, install wizard gets hosed → If Linux inst msg "dir doesn't exist" is closed by checkbox, install wizard won't advance past "Next"
reassigning to Samir.
Assignee: ssu → sgehani
Status: NEW → ASSIGNED
Priority: P3 → P5
Over to Syd for installer bug triage
Assignee: sgehani → syd
Status: ASSIGNED → NEW
Target Milestone: --- → M1
Target Milestone: M1 → Future
Attached patch patch (obsolete) — Splinter Review
this is actually a problem throughout the installer. this patch uses the OK/cancel handler for close dialog event in cases where the handler does something more than destroying the dialog widget.
Assignee: slogan → ajschult
Status: NEW → ASSIGNED
Attachment #144546 - Flags: review?(dveditz+bmo)
Comment on attachment 144546 [details] [diff] [review] patch this isn't needed for the SetupType dialogs with bug 240929. it's still needed for the CRC dailog and the error dialog.
Comment on attachment 144546 [details] [diff] [review] patch r=dveditz
Attachment #144546 - Flags: review?(dveditz) → review+
Comment on attachment 144546 [details] [diff] [review] patch note that with bug 240929 and bug 236294 fixed, only the ErrorHandler part here is relevant.
Attachment #144546 - Flags: superreview?(bryner)
Attachment #144546 - Flags: superreview?(bryner) → superreview+
Comment on attachment 144546 [details] [diff] [review] patch the Setup Type dialogs are modal and the CRC dialog is gone. Unfortunately, the ErrorHandler fix doesn't work. gtk (at least gtk1) steps on the aData parameter and passes in a pointer to NULL. As a result it thinks all errors are fatal.
Attachment #144546 - Attachment is obsolete: true
Attached patch fix error dialogSplinter Review
this reworks the dialog so passing the aData parameter isn't necessary since gtk does want to play nicely.
Attachment #147374 - Flags: review?(dveditz)
Comment on attachment 147374 [details] [diff] [review] fix error dialog r=dveditz
Attachment #147374 - Flags: review?(dveditz) → review+
Attachment #147374 - Flags: superreview?(bryner)
What happened to this patch? Looks like it needs to be superreviewed.
Attachment #147374 - Flags: superreview?(bryner) → superreview+
fixed
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: