Bug 49487 If Linux inst msg "dir doesn't exist" is closed by checkbox, install wizard won't advance past "Next" patch by ajschult@verizon.net r=dveditz sr=bryner